# glambda

./: .ghc.environment.x86_64-linux-8.6.4  .gitignore  .travis.yml  CHANGES.md  Exercise1.md  Exercise2.md  Exercise3.md  LICENSE  README.md  glambda.cabal  stack.yaml
Language/Glambda/: Check.hs  Eval.hs  Exp.hs  Globals.hs  Lex.hs  Monad.hs  Parse.hs  Pretty.hs  Repl.hs  Statement.hs  Token.hs  Type.hs  Unchecked.hs  Util.hs
Tests/: Check.hs  Lex.hs  Main.hs  Parse.hs  Util.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.4/: glambda-1.0.2-inplace.conf  package.cache
exercises/: Ex1.hs  Ex2.hs
main/: Main.hs
pres/: G.hs  README.md  STy.hs  deBruijn.tex  notes.txt  slides.key
src/Language/Glambda/: Check.hs  Eval.hs  Exp.hs  Globals.hs  Lex.hs  Monad.hs  Parse.hs  Pretty.hs  Repl.hs  Shift.hs  Statement.hs  Token.hs  Type.hs  Unchecked.hs  Util.hs
testing/Tests/: Lex.hs  Util.hs
tests/: prime.glam  revapp.glam
tests/Tests/: Check.hs  Lex.hs  Parse.hs  Util.hs
